removed List.of (incompatible with Java 8)